fixed overlap issue

--- a/css/page/services-sm.css
+++ b/css/page/services-sm.css
@@ -1,12 +1,7 @@
-
-
-
-
 /*-------------transparent area----------------------------*/
 
-
 .transparent {
-    background: rgba(0,0,0,0.6);
+    background: rgba(0, 0, 0, 0.6);
     box-shadow: -10px -10px 25px rgba(0, 0, 0, 0.2), 10px 10px 25px rgba(0, 0, 0, 0.13);
     border-radius: 10px;
 
@@ -15,15 +10,12 @@
 }
 
 .transparent-margin {
-
     top: 0;
 }
-
 
 .sustainable-icon {
     width: 150px;
     /*height: 103px;*/
-
 }
 
 .sustainable-description {
@@ -35,15 +27,12 @@
     color: #ffffff;
 }
 
-
 .card1 {
     /*width: 200vh;*/
     height: 63vh;
     width: 100%;
 
-
     border: none !important;
-
 
     filter: drop-shadow(5px 5px 2px rgba(99, 127, 76, 0.25));
     border-radius: 10px;
@@ -57,7 +46,7 @@
 /*----------------how it works-----------------------------*/
 .horizontal-separator {
     width: 100%;
-    background-color: #D9D9D9;
+    background-color: #d9d9d9;
     height: 2px;
     margin: auto;
     margin-bottom: 1rem;
@@ -65,7 +54,7 @@
 
 .how-it-works {
     font-size: 3rem;
-    color: #637F4C;
+    color: #637f4c;
     margin-bottom: 2rem;
 }
 
@@ -92,22 +81,18 @@
     margin-top: 7rem;
 }
 
-
 .container1 {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-
 }
 
 .container1:hover {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     transform: scale(0.97);
-
 }
-
 
 .container1 .card {
     width: 350px;
@@ -115,17 +100,14 @@
     padding: 60px;
     margin: 10px;
     background: #637f4c;
-    box-shadow: 0.6em 0.6em 1.2em #d2dce9,
-    -0.5em -0.5em 1em #ffffff;
+    box-shadow: 0.6em 0.6em 1.2em #d2dce9, -0.5em -0.5em 1em #ffffff;
     border-radius: 5px;
     border: none !important;
-
 }
 .how-it-works-p {
     font-size: 1rem;
     margin-bottom: 1.5rem;
     color: #637f4c;
-
 }
 
 .container1 .card .content-box {
@@ -134,8 +116,20 @@
     align-items: center;
     flex-direction: column;
 }
-.text-num{
+.text-num {
     color: #637f4c;
 }
 
+/****************** Shihan's Edit***********/
 
+.transparent-background {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    border: none;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    outline: 20px rgba(0, 0, 0, 0.6) solid;
+}
